fix: background image overlapping

--- a/_sass/index.scss
+++ b/_sass/index.scss
@@ -28,4 +28,5 @@
     background-size: 200%;
     height: 300px;
     background-position: left top;
+    margin-top: $spacer-xl;
 }
